# bullet

./: .gitignore  Dockerfile  docker-compose.yml  env.example  pyproject.toml  start.sh
.cursor/plans/: bullet_webui_重构计划_f00a64b4.plan.md
app/: config.py  database.py  deps.py  main.py  migration.py  router.py
app/api/: ack.py  webhook.py
app/auth/: __init__.py  init_admin.py  routes.py  utils.py
app/channels/: feishu.py  resend_email.py  slack.py  twilio_sms.py
app/models/: __init__.py  alert.py  contact.py  namespace.py  notification_group.py  notification_template.py  project.py  ticket.py  user.py
app/services/: escalation.py  notification.py  template.py
app/sources/: aliyun_pai.py
app/static/css/: output.css
app/templates/: dashboard.html
app/templates/auth/: login.html
app/templates/contacts/: form.html  list.html
app/templates/layouts/: app.html  base.html
app/templates/namespaces/: detail.html  form.html  list.html
app/templates/notification_groups/: form.html  list.html
app/templates/notification_templates/: form.html  list.html
app/templates/projects/: detail.html  form.html
app/templates/tickets/: detail.html  list.html
app/templates/users/: form.html  list.html
app/web/: __init__.py  contacts.py  dashboard.py  namespaces.py  notification_groups.py  notification_templates.py  templates.py  tickets.py  users.py
docs/: design.md
docs/guides/: grafana.md
frontend/: package.json
frontend/src/: input.css
tests/: test_aliyun_source.py
tests/artifacts/: aliyun.jsonl
