[project]
name = "bullet"
version = "0.4.0"
description = "Webhook relay service for alerts with WebUI management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    # MongoDB
    "beanie>=1.26.0",
    "motor>=3.6.0",
    # Session & Auth
    "itsdangerous>=2.2.0",
    "starlette-session>=0.4.0",
    "bcrypt>=4.0.0",
    # Background tasks
    "apscheduler>=3.10.0",
    # Twilio SMS
    "twilio>=9.0.0",
]

[project.scripts]
bullet = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
